# manim-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  config.py  generate.py  manim_generator.py  manim_generator_backup.py  manim_workflow.py  manual_render.py  pyproject.toml  pytest.ini  requirements.txt  video_data.txt
.github/workflows/: ci.yml
bench_prompts/: embedding_space.txt  llm_explainer.txt
docs/: excalidraw_flow.excalidraw
prompts/: init_prompt.txt  review_prompt.txt  review_prompt_enhanced.txt
src/: console.py  main.py  workflow.py
src/manim_generator/: __init__.py  artifacts.py  cli.py  console.py  main.py  manual_render.py  workflow.py
src/manim_generator/utils/: config.py  file.py  llm.py  parsing.py  prompt.py  rendering.py  usage.py  video.py
src/utils/: __init__.py  config.py  file.py  llm.py  parsing.py  rendering.py  usage.py  video.py
tests/: run_tests.py  test_artifacts.py  test_cli_integration.py  test_console.py  test_llm.py  test_prompt.py  test_rendering.py  test_usage.py  test_workflow.py
utils/: artifacts.py  code.py  console.py  file.py  llm.py  text.py  usage.py  video.py
